resources/assets/sass/app.scss
/* ... */
.dashboard-tip {
  color: #d9534f;
  font-size: 17px; }

.menu-tip {
  color: #fff;
  font-size: 17px; }

.input-lg {
  height: 35px;
  padding: 10px 5px; }

.form-control {
  padding: 6px 5px; }

.main-view{
  padding-top: 58px;
  input.form-control{
    border: none;
    background: $light-grey-two;
    box-shadow: none;
  }
}

.fallback {
  width: 30%;
  margin: auto; }

/*# sourceMappingURL=app.css.map */

